Grace/tests/gibbs/errors/t225.grace
// ERROR = P1040
catch {1 / 0}
    case
